--- a/example2-SeriousWebpack/app/root/index.html
+++ b/example2-SeriousWebpack/app/root/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Serious Webpack</h1>
 </body>
+<script src="vendor.js"></script> <!--vendor.js bundle MUST be set before, because bundle.js requires it.-->
 <script src="bundle.js"></script>
 </html>
