[Feature] exercise pokedex done

--- a/example3-HelloWorld/app/root/index.html
+++ b/example3-HelloWorld/app/root/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>HelloWorld</h1>
+<div id="root"></div>
     <!--There is some space here-->
 </body>
 <script src="vendor.js"></script> <!--vendor.js bundle MUST be set before, because bundle.js requires it.-->
